--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <font color="#ffffff" size="4" face='Arvo' >
             <u> <big>Freddy Brau Lee Mamani Rivas</big></u> 
         </font>
+        <br>
+        <br>
+        <a href="https://github.com/brau-lee/cv">
+            <img alt="repositorio hoja de vida  brau-lee " src="https://github.com/brau-lee/cv/blob/main/foto-cv.png?raw=true">
+        </a>
 
         <font color="#ffffff" size="4" face='Space Mono' >
             <table border=10 >
@@ -54,17 +59,17 @@
      </div>
     <div align="center">
         <font color="#ffffff" size="4" face='open sans' >     
-            <table border="1" background="#0000" >
-                <caption>Titulo de la tabla</caption>
-                <tr>
-                <th>Col.Cab.1</th>
-                <th>Col.Cab.2</th>
+            <table border>
+                <tr><th rowspan=2>head1</th>
+                <td>item 1</td> 
                 </tr>
-                <tr>
-                <td>Celda 1</td>
-                <td>Celda 2</td>
+                <tr><td>item 5</td>
                 </tr>
-            </table>
+                <tr><th>head2</th>
+                    <td>item 9</td> 
+                </tr>
+            </table>  
+            
         </font>
     </div>
     
