ordenando-los-iconos

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Open+Sans:wght@800&display=swap" rel="stylesheet">  
+    <link href='https://raw.githubusercontent.com/brau-lee/cv/cc4694b3cd139a34ced272e884ed103017aafb9c/logo.svg' rel='shortcut icon' type='image/x-icon'>
 </head>
 
 <body bgcolor="000000" >
@@ -48,7 +49,6 @@
      <br>
      <div  align="center"class="img">
         <table border="1" background="#0000" >
-            <caption>Titulo de la tabla</caption>
             <tr>
             <th> <img src="" alt=""></th>
             <th> <img src="" alt=""></th>
@@ -60,12 +60,27 @@
     <div align="center">
         <font color="#ffffff" size="4" face='open sans' >     
             <table border>
-                <tr><th rowspan=2>head1</th>
+                <tr><th rowspan=2>
+                    <a href="https://github.com/brau-lee/cv">
+                    <img alt="logo brau-lee " src="https://raw.githubusercontent.com/brau-lee/cv/cc4694b3cd139a34ced272e884ed103017aafb9c/logo.svg">
+                </a></th>
                 <td>item 1</td> 
                 </tr>
                 <tr><td>item 5</td>
                 </tr>
-                <tr><th>head2</th>
+                <tr><th>
+                    <a href="https://www.facebook.com/freddy.brau.lee">
+                        <img alt="facebook brau - lee" src="https://raw.githubusercontent.com/brau-lee/Brau-lee/00f863273deceac00d3e13db37aef8dc15ecb59e/images/facebook.svg">
+                      </a>
+                      
+                      <a href="https://www.instagram.com/brau_1ee/">
+                        <img alt="instagram brau - lee" src="https://raw.githubusercontent.com/brau-lee/Brau-lee/00f863273deceac00d3e13db37aef8dc15ecb59e/images/instagram.svg">
+                      </a>
+                      
+                      <a href="https://www.instagram.com/brau_1ee/">
+                        <img alt="instagram brau - lee" src="https://img.shields.io/badge/-LinkedIn-black.svg?style=for-the-badge&logo=linkedin&colorB=555">
+                      </a>
+                </th>
                     <td>item 9</td> 
                 </tr>
             </table>  
