arreglos-del-logo-twitter

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <br>
         <br>
         <a href="https://github.com/brau-lee/cv">
-            <img alt="repositorio hoja de vida  brau-lee " src="https://github.com/brau-lee/cv/blob/main/foto-cv.png?raw=true">
+            <img alt="repositorio hoja de vida  brau-lee " src="https://github.com/brau-lee/cv/blob/main/img/foto-cv.png?raw=true">
         </a>
 
         <font color="#ffffff" size="4" face='Space Mono' >
@@ -76,8 +76,12 @@
                       <a href="https://www.instagram.com/brau_1ee/">
                         <img alt="instagram brau - lee" src="https://raw.githubusercontent.com/brau-lee/Brau-lee/00f863273deceac00d3e13db37aef8dc15ecb59e/images/instagram.svg">
                       </a>
-                      
+
                       <a href="https://www.instagram.com/brau_1ee/">
+                        <img alt="instagram brau - lee" src="https://raw.githubusercontent.com/brau-lee/cv/d3458521c82f26968d2c5c4c45d7a77b87826114/img/twitter.svg">
+                      </a>
+                      
+                      <a href="https://www.linkedin.com/in/freddy-brau-lee-mamani-rivas-4456a5217/">
                         <img alt="instagram brau - lee" src="https://img.shields.io/badge/-LinkedIn-black.svg?style=for-the-badge&logo=linkedin&colorB=555">
                       </a>
                 </th>
