--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
         <font color="#ffffff" size="4" face='Space Mono' >
             <table border=10 >
                 <tr> 
-                <td> <a>About</a>      </td> 
-                <td> <a>Skills</a>     </td>
-                <td> <a>Education</a>  </td> 
-                <td> <a>Portafolio</a> </td>
+                <td> <a href="#about" >About</a>         </td> 
+                <td> <a href="#skills">Skills</a>        </td>
+                <td> <a href="#education">Education</a>  </td> 
+                <td> <a href="#Portafolio">Portafolio</a></td>
                 </tr>
             </table>
             <table border=10>
                 <tr>
-                <td> <a>Experience</a> </td>	
-                <td> <a>References</a> </td> 
-                <td>   <a>Contact</a>  </td> 
+                <td> <a href="#experience">Experience</a> </td>	
+                <td> <a href="#references">References</a> </td> 
+                <td> <a href="#contact">Contact</a>       </td> 
                 </tr>    
             </table>
         </font>
     </div>      
      <br>
-     <div  align="center"class="img">
+     <div  align="center">
         <table border="1" background="#0000" >
             <tr>
             <th> <img src="" alt=""></th>
@@ -57,16 +57,25 @@
 
 
      </div>
-    <div align="center">
+     <br>
+     <br>
+    <div id=about align="center">
         <font color="#ffffff" size="4" face='open sans' >     
             <table border>
-                <tr><th rowspan=2>
-                    <a href="https://github.com/brau-lee/cv">
-                    <img alt="logo brau-lee " src="https://raw.githubusercontent.com/brau-lee/cv/cc4694b3cd139a34ced272e884ed103017aafb9c/logo.svg">
-                </a></th>
-                <td>item 1</td> 
+                <tr>
+                    <th rowspan=2>
+                        <a href="https://github.com/brau-lee/cv">
+                        <img alt="logo brau-lee " src="https://raw.githubusercontent.com/brau-lee/cv/cc4694b3cd139a34ced272e884ed103017aafb9c/logo.svg">
+                        </a>
+                    </th>
+                    <td align="center">Hello! I’m Brau Lee Mamani<br>   I am passionate about Philanthropy and Cience. I like to develop technologies and give public education. amateur of graphic design tools such as Photoshop, Figma.  A team worker that gets the job done assigned.
+                    </td> 
                 </tr>
-                <tr><td>item 5</td>
+                <tr>
+                    <td> 
+                        <p align="center">Bio <br> 
+                        </p> 
+                    </td>
                 </tr>
                 <tr><th>
                     <a href="https://www.facebook.com/freddy.brau.lee">
@@ -78,14 +87,16 @@
                       </a>
 
                       <a href="https://www.instagram.com/brau_1ee/">
-                        <img alt="instagram brau - lee" src="https://raw.githubusercontent.com/brau-lee/cv/d3458521c82f26968d2c5c4c45d7a77b87826114/img/twitter.svg">
+                        <img alt="twitter brau - lee" src="https://raw.githubusercontent.com/brau-lee/cv/2d88700f24ec0c34cc7b50fd1aad008502f67755/img/twitter.svg">
                       </a>
                       
                       <a href="https://www.linkedin.com/in/freddy-brau-lee-mamani-rivas-4456a5217/">
                         <img alt="instagram brau - lee" src="https://img.shields.io/badge/-LinkedIn-black.svg?style=for-the-badge&logo=linkedin&colorB=555">
                       </a>
-                </th>
-                    <td>item 9</td> 
+                    </th>
+                    <td align="center"> 
+                        I can easily capitalize on low hanging fruits and quickly maximize timely
+                    </td> 
                 </tr>
             </table>  
             
