--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <img alt="logo brau-lee " src="https://raw.githubusercontent.com/brau-lee/cv/cc4694b3cd139a34ced272e884ed103017aafb9c/logo.svg">
                         </a>
                     </th>
-                    <td align="center">Hello! I’m Brau Lee Mamani<br>   I am passionate about Philanthropy and Cience. I like <br> to develop technologies and give public education. <br> amateur of graphic design tools such as Photoshop, <br> Figma.  A team worker that gets the job done assigned.
+                    <td align="center">Hello! I’m Brau Lee Mamani<br>   I am passionate about Philanthropy and Cience. I like <br> develop technologies and give public education. <br> amateur of graphic design tools such as Photoshop, <br> Figma.  A team worker that gets the job done assigned.
                     </td> 
                 </tr>
                 <tr>
